--- a/KinectMathGames/KinectMathGames.csproj
+++ b/KinectMathGames/KinectMathGames.csproj
@@ -154,14 +154,20 @@
     <Resource Include="Images\circle.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Gui\SettingsIcon.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\SettingsIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\PauseIcon.png" />
     <Resource Include="Images\PlayIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PositionIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\VelocityIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\GraphIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
