Changed Gate Picture
I changed the gate picture and added instructions.  I need to fix a bug where it can't find the recource of the appropriate new gate picture

--- a/KinectMathGames/KinectMathGames.csproj
+++ b/KinectMathGames/KinectMathGames.csproj
@@ -172,5 +172,14 @@
   <ItemGroup>
     <Resource Include="Images\Gate.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\YellowGateT.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\GreenGateT.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\RedGateT.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
